--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: margav-solar
     env: node
-    buildCommand: npm install && npm run build
+    buildCommand: npm install; npm run build
     startCommand: npm start
     envVars:
       - key: NODE_VERSION
