Update careers application: remove CV upload, add interest registration form, update email template

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
+    "baseline-browser-mapping": "^2.9.13",
     "vite": "^5.0.8"
   }
 }
